<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hydro_input_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/hint_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hydro_input_email"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hydro_input_phone"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/hydro_GroupAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/GroupAmount"
            android:inputType="number"
            android:maxLength="2" />

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="137dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Status"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_student"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Student" />

            <RadioButton
                android:id="@+id/radio_staff"
                android:layout_width="82dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Staff" />

            <RadioButton
                android:id="@+id/radio_public"
                android:layout_width="84dp"
                android:layout_height="14dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Public" />

        </RadioGroup>
    </LinearLayout>
        <LinearLayout
            android:layout_width="276dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/hydro_matrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:hint="@string/matrix"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/hydroSubmitInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>




