<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Confirmation.GymConfirmation">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="494dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="60dp"
                android:layout_height="44dp"
                android:text="@string/hint_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="66dp"
                android:layout_height="50dp"
                android:text="@string/hint_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/matrix"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:text="@string/hint_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/hint_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/Facilities"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/Tnumber"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Status"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hydro_date_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_name_confirm"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_matrix_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_email_confirm"
                android:layout_width="271dp"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_phone_confirm"
                android:layout_width="271dp"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_facilities_confirm"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:text="@string/HYDROTHERAPY_CENTER"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_people_confirm"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                android:id="@+id/hydro_status_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/hydro_price_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_hydro_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm" />
    </LinearLayout>

</LinearLayout>
